--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ body,
 .App {
   height: 100%;
   display: grid;
-  grid-template-columns: 2fr 6fr 3fr;
+  grid-template-columns: 8fr 26fr 13fr;
 }
 
 /* Sidebar */
@@ -143,4 +143,75 @@ body,
 /* Main */
 main {
   background-color: #f2f3f9;
+  padding: 30px;
+}
+
+/* Profile */
+div.profile {
+  padding: 20px;
+}
+
+.profile > .profileHeader {
+  display: flex;
+  justify-content: space-between;
+}
+
+.profile > .profileHeader > h1 {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 30px;
+  letter-spacing: 0.02em;
+}
+
+/* Profile Store Img */
+.profile .profileStore {
+  height: 20%;
+  margin-top: 15px;
+  text-align: center;
+}
+
+.profileStore .container {
+  position: relative;
+  display: inline-block;
+  height: 100%;
+}
+
+.profileStore .container > img {
+  height: 100%;
+}
+
+.profileStore .container div.badge {
+  position: absolute;
+  right: 0px;
+}
+
+.profile .storeTitle  {
+  text-align: center;
+  margin-top: 10px;
+}
+
+/* Others */
+button.optionButton {
+  border: none;
+  background-color: unset;
+}
+
+button.optionButton img {
+  transform: scale(0.9);
+}
+
+div.badge {
+  padding: 10px;
+  background-color: #fff;
+  border-radius: 15px;
+  display: inline-flex;
+  height: 35%;
+  width: 35%;
+  box-shadow: 0px 0px 30px #00000025;
+  align-items: center;
+  justify-content: center;
+}
+
+div.badge img {
+  height: 100%;
 }
