--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
   background-color: #fff;
   display: flex;
   flex-direction: column;
-  max-width: 400px;
+  max-width: 450px;
 }
 /* Header */
 .sidebar header {
@@ -137,12 +137,6 @@
   color: #112650;
 }
 
-/* Main */
-main {
-  background-color: #f2f3f9;
-  padding: 30px;
-}
-
 /* Profile */
 div.profile {
   padding: 20px 45px 25px;
@@ -192,6 +186,12 @@ div.profile {
   right: 0px;
   height: 35%;
   width: 35%;
+  padding: 7px;
+  border-radius: 12px;
+}
+
+.profileStore .container div.badge {
+  height: 32%;
 }
 
 .profile .storeTitle {
@@ -214,10 +214,6 @@ div.profile {
   display: flex;
   justify-content: space-evenly;
 }
-
-/* .profile .storeRates div:first-child {
-  border-right: 0.5px solid #99c3c3;
-} */
 
 .profile .vector {
   display: block;
@@ -328,7 +324,7 @@ div.badge {
   background-color: #fff;
   border-radius: 15px;
   display: inline-flex;
-  box-shadow: 0px 10px 30px #00000015;
+  box-shadow: 0px 10px 30px #00000020;
   align-items: center;
   justify-content: center;
 }
@@ -360,11 +356,59 @@ div.badge img {
   display: none;
 }
 
+.center {
+  min-height: 80vh;
+  height: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Main */
+main {
+  background-color: #f2f3f9;
+  padding: 20px;
+}
+
+main header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+main header .search {
+  background-color: #fff;
+  border-radius: 50px;
+  padding: 8px 15px;
+  display: flex;
+  align-items: center;
+  box-shadow: 0 5px 10px #00000005;
+}
+
+main header .search input {
+  margin-left: 10px;
+  line-height: 25px;
+  font-size: 14px;
+  outline: none;
+  border: none;
+  width: 230px;
+}
+
+main header .bell {
+  border: none;
+  background-color: unset;
+}
+
+main header .bell svg {
+  margin-left: -5px;
+  margin-bottom: -5px;
+}
+
 /* Responsive */
 /* Responsive */
 /* Responsive */
 /* Responsive */
-@media (max-width: 400px) {
+@media (max-width: 450px) {
   .App {
     display: block;
     height: 100%;
@@ -387,10 +431,44 @@ div.badge img {
   }
 
   .menuBtn {
-    display: block;
+    display: flex;
+    height: 40px;
+    width: 40px;
+    align-items: center;
+    justify-content: center;
+    padding: 9px;
+    border: none;
+    background-color: unset;
+    margin-left: -5px;
+    margin-right: 5px;
+  }
+
+  .menuBtn svg path {
+    stroke: #112650;
   }
 
   .profile {
     height: auto !important;
+  }
+
+  main {
+    padding: 15px;
+  }
+
+  main header > div {
+    display: flex;
+    flex-grow: 1;
+  }
+
+  main header .search {
+    flex-grow: 1;
+    margin-right: 12px;
+  }
+
+  main header .search input {
+    margin-left: 10px;
+    line-height: 25px;
+    font-size: 14px;
+    width: 170px;
   }
 }
