--- a/src/App.css
+++ b/src/App.css
@@ -453,6 +453,18 @@ main .graph1 {
   grid-area: graph1;
   min-height: 200px;
 }
+
+main .graph1 .iconContainer {
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+main .chartContainer {
+  padding: 15px;
+}
+
 main .graph2 {
   grid-area: graph2;
   min-height: 200px;
@@ -477,13 +489,22 @@ main .graph3 .boxContainer {
 
 .box {
   flex-grow: 1;
-  min-height: 100px;
+  display: flex;
+  padding: 20px !important;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;
+}
+
+.boxContainer .box p {
+  opacity: 0.7;
 }
 
 main .graphHeader {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  gap: 20px;
 }
 
 /* Responsive */
@@ -592,5 +613,10 @@ main .graphHeader {
   main section .graph.graph3 .graphHeader {
     margin-left: 20px;
     margin-right: 20px;
+  }
+
+  /* category */
+  main .boxContainer .box p {
+    font-size: 14px;
   }
 }
