--- a/src/App.css
+++ b/src/App.css
@@ -417,13 +417,25 @@ main header .bell svg {
 /* Main */
 main section {
   flex-grow: 1;
-  display: grid;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  max-height: 600px;
   /* background-color: pink; */
-  grid-template-areas:
-    'graph1 graph1'
-    'graph2 graph3';
-  grid-gap: 20px;
-  max-height: 800px;
+}
+
+main div.row {
+  display: flex;
+}
+
+main div.row:first-child {
+  flex: 55%;
+}
+
+main div.row:last-child {
+  flex: 45%;
+  display: flex;
+  gap: 15px;
 }
 
 main .sectionHeader {
@@ -449,9 +461,15 @@ main .graph {
   padding: 10px 20px;
 }
 
+main .graphHeader {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 20px;
+}
+
 main .graph1 {
-  grid-area: graph1;
-  min-height: 200px;
+  flex-grow: 1;
 }
 
 main .graph1 .iconContainer {
@@ -462,21 +480,67 @@ main .graph1 .iconContainer {
 }
 
 main .chartContainer {
-  padding: 15px;
+  padding: 15px 0;
+  max-width: 40%;
+  margin: auto;
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+main .chartContainer::before {
+  content: '68%';
+  position: absolute;
+  font-weight: bold;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 main .graph2 {
-  grid-area: graph2;
-  min-height: 200px;
+  flex: 46%;
+  display: flex;
+  flex-direction: column;
 }
+
+main .graph2 .chartDetails {
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  gap: 30px;
+  font-size: 14px;
+}
+
+.graph2 .chartDetails p::before {
+  content: '';
+  height: 10px;
+  width: 10px;
+  border-radius: 5px;
+  display: inline-block;
+  margin-right: 5px;
+}
+
+.graph2 .container {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+.graph2 .chartDetails p:first-child::before {
+  background-color: #41c8e6;
+}
+
+.graph2 .chartDetails p:last-child::before {
+  background-color: #ab87d1;
+}
+
 main .graph3 {
-  min-height: 200px;
-  grid-area: graph3;
   background-color: unset;
   padding: 0;
   display: flex;
   flex-direction: column;
   gap: 15px;
+  flex: 54%;
 }
 
 main .graph3 .boxContainer {
@@ -484,27 +548,30 @@ main .graph3 .boxContainer {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  gap: 20px;
+  gap: 15px;
 }
 
 .box {
   flex-grow: 1;
   display: flex;
-  padding: 20px !important;
+  padding: 10px 15px !important;
   align-items: center;
   justify-content: space-between;
-  gap: 10px;
+  gap: 5px;
+}
+
+.box img {
+  width: 15%;
 }
 
 .boxContainer .box p {
   opacity: 0.7;
+  font-size: 14px;
+  line-height: 16px;
 }
 
-main .graphHeader {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 20px;
+.box .categoryDetails {
+  width: 50%;
 }
 
 /* Responsive */
@@ -600,9 +667,8 @@ main .graphHeader {
     padding-bottom: 40px;
   }
   main section {
-    display: flex;
     gap: 25px;
-    flex-direction: column;
+    max-height: none;
   }
 
   main .sectionHeader h2 {
@@ -615,8 +681,32 @@ main .graphHeader {
     margin-right: 20px;
   }
 
+  main .chartContainer {
+    max-width: 70%;
+  }
+
+  .graph2 .chartDetails p {
+    font-size: 16px;
+    margin-bottom: 10px;
+  }
+
   /* category */
   main .boxContainer .box p {
     font-size: 14px;
+  }
+
+  main .box {
+    padding: 20px !important;
+  }
+
+  main div.row:last-child {
+    flex-direction: column !important;
+    gap: 25px;
+  }
+}
+
+@media (min-height: 700px) and (max-width: 1440px) {
+  main .chartContainer {
+    max-width: 55%;
   }
 }
