--- a/src/App.css
+++ b/src/App.css
@@ -367,6 +367,10 @@ div.badge img {
   justify-content: center;
 }
 
+.green {
+  color: #33a429;
+}
+
 /* Main */
 main {
   background-color: #f2f3f9;
@@ -470,6 +474,30 @@ main .graphHeader {
 
 main .graph1 {
   flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+main .graph1 .container {
+  display: flex;
+  gap: 15px;
+  flex-grow: 1;
+}
+
+main .graph1 .chartContainer {
+  flex: 65%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 60%;
+}
+
+main .graph1 .chartDetails {
+  flex: 30%;
+  display: flex;
+flex-direction: column;
+gap: 20px;
+justify-content: center;
 }
 
 main .graph1 .iconContainer {
@@ -477,6 +505,43 @@ main .graph1 .iconContainer {
   display: flex;
   align-items: center;
   gap: 10px;
+}
+
+.graph1 .chartDetailsRow {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 15px;
+  padding: 0 20px;
+}
+
+.graph1 .chartDetailsRow h2 {
+  font-size: 20px;
+  line-height: 26px;
+}
+
+.graph1 .chartDetailsRow p {
+  color: #112650;
+  font-size: 12px;
+}
+
+.graph1 .chartDetailsRow pre {
+  font-size: 14px;
+  align-self: flex-start;
+  margin-top: 5px;
+}
+
+.graph1 .chartDetailsRow i {
+  height: 38px;
+  width: 38px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 8px;
+}
+
+.graph1 .chartDetailsRow i svg {
+  margin-right: -3px;
 }
 
 main .chartContainer {
@@ -488,7 +553,12 @@ main .chartContainer {
   align-items: center;
   position: relative;
 }
-main .chartContainer::before {
+
+main .graph2 .chartContainer {
+  max-width: 40%;
+}
+
+main .graph2 .chartContainer::before {
   content: '68%';
   position: absolute;
   font-weight: bold;
@@ -681,8 +751,16 @@ main .graph3 .boxContainer {
     margin-right: 20px;
   }
 
-  main .chartContainer {
-    max-width: 70%;
+  main .graph2 .chartContainer {
+    max-width: 60% !important;
+  }
+
+  main .graph1 .container {
+    flex-direction: column;
+  }
+
+  main .graph1 .chartContainer {
+    max-width: 100% !important;
   }
 
   .graph2 .chartDetails p {
@@ -706,7 +784,7 @@ main .graph3 .boxContainer {
 }
 
 @media (min-height: 700px) and (max-width: 1440px) {
-  main .chartContainer {
+  main .graph2 .chartContainer {
     max-width: 55%;
   }
 }
