--- a/src/App.css
+++ b/src/App.css
@@ -485,19 +485,19 @@ main .graph1 .container {
 }
 
 main .graph1 .chartContainer {
-  flex: 65%;
+  flex: 70%;
   display: flex;
   justify-content: center;
   align-items: center;
-  max-width: 60%;
+  max-width: 57%;
 }
 
 main .graph1 .chartDetails {
   flex: 30%;
   display: flex;
-flex-direction: column;
-gap: 20px;
-justify-content: center;
+  flex-direction: column;
+  gap: 20px;
+  justify-content: center;
 }
 
 main .graph1 .iconContainer {
@@ -761,6 +761,10 @@ main .graph3 .boxContainer {
 
   main .graph1 .chartContainer {
     max-width: 100% !important;
+  }
+
+  .graph1 .chartDetails {
+    margin-bottom: 15px;
   }
 
   .graph2 .chartDetails p {
