--- a/src/App.css
+++ b/src/App.css
@@ -760,7 +760,7 @@ main .graph3 .boxContainer {
   }
 
   main .graph1 .chartContainer {
-    max-width: 100% !important;
+    max-width: 98% !important;
   }
 
   .graph1 .chartDetails {
@@ -770,6 +770,10 @@ main .graph3 .boxContainer {
   .graph2 .chartDetails p {
     font-size: 16px;
     margin-bottom: 10px;
+  }
+
+  .chartPlaceholder {
+    height: 300px;
   }
 
   /* category */
