--- a/src/App.css
+++ b/src/App.css
@@ -456,6 +456,27 @@ main .dropdown {
   justify-content: center;
   width: 120px;
   border-radius: 50px;
+  padding: 0 15px;
+  outline: none;
+  border: none;
+  box-shadow: 0 10px 10px #00000005;
+  appearance: none;
+}
+.select-wrapper {
+  position: relative;
+}
+.select-wrapper:after {
+  content: '';
+  height: 15px;
+  width: 15px;
+  background-image: url(/src/dropdown.svg);
+  background-repeat: no-repeat;
+  /* background-position: center; */
+  position: absolute;
+  top: 17px;
+  right: 12px;
+  z-index: 5;
+  pointer-events: none;
 }
 
 /* Graphs */
@@ -463,6 +484,7 @@ main .graph {
   background-color: #fff;
   border-radius: 10px;
   padding: 10px 20px;
+  box-shadow: 0 10px 10px #00000005;
 }
 
 main .graphHeader {
